# hif

./: .gitignore  Makefile  Makefile.in  README.md  build.sh  config.h  config.h.in~  config.status  configure  configure.ac  environment.h  hif.c  pandoc.css  publish.sh  storage_adapter.c  storage_adapter.h
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
include/: environment.h  hif.h  memo_repository.h  storage_adapter.h  utilities.h
src/: Makefile.am  Makefile.in  environment.c  hif.c  memo_repository.c  storage_adapter.c
